Add bytebuddy mute WARN config